--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Albert's Blog
+title: 乌托邦
 subtitle:
 description:
 keywords:
-author: Albert
-language:
+author: albert
+language: zh-Hans
 timezone:
 
 # URL
@@ -96,4 +96,4 @@ theme: next
 deploy:
   type: git
   repository: git@github.com:albert567/blob.git
-  branch: master
+  branch: gh-pages
