--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,12 @@ search:
   field: post
   format: html
   limit: 10000
+
+baidu_url_submit:
+  count: 100 # 提交最新的一个链接
+  host: altctrl.cn # 在百度站长平台中注册的域名
+  token: zS4XohtljWwCTjiQ # 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+  path: baidu_urls.txt # 文本文档的地址， 新链接会保存在此文本文档里
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -94,6 +100,7 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
+- type: git
   repository: git@github.com:albert567/blob.git
   branch: gh-pages
+- type: baidu_url_submitter
